force-app/main/default/objects/FEC_Additional_Field_List_Value__c/FEC_Additional_Field_List_Value__c.object-meta.xml
<CustomObject>
    <label>FEC Additional Field List Value</label>
    <nameField>
        <label>Name EN</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>FEC Additional Field List Value</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>