force-app/main/default/objects/FEC_Additional_Field_List_Value__c/fields/FEC_Name_VN__c.field-meta.xml
<CustomField>
    <fullName>FEC_Name_VN__c</fullName>
    <label>Name VN</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>