force-app/main/default/objects/FEC_Additional_Field_List_Value__c/fields/FEC_Order__c.field-meta.xml
<CustomField>
    <fullName>FEC_Order__c</fullName>
    <externalId>true</externalId>
    <label>Order</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>