force-app/main/default/objects/FEC_Additional_Field_List_Value__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>FEC_Additional_Field__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>